- corrected unit calculation in void Printer::MemoryPosition()
- rise of LOW_TICKS_PER_MOVE to 500k (It might not have a big effect but maybe on some parts)
- removed some old TODOs on which I am now absolut sure how to handle them.
- dont show "setTemperatureForExtruder(): cant set Temp for Extr." when it is set to 0°C.
- switched MOVE_CACHE back to 17 for testing reasons.

V RF.01.41.04.Mod alpha (2018-03-12) 
- added FEATURE_DEBUG_MOVE_CACHE_TIMING to debug movecache fill while printing.
    if you want to adjust LOW_TICKS_PER_MOVE to default: M3993 P300000 (LOW_TICKS_PER_MOVE is 300000)
    if you want to read and drop statistics:             M3993

V RF.01.41.03.Mod alpha (2018-03-10) 
- some tiny tweaks
- cleanup of homeZ for better reading. Inserted a lot of casts.
- removed some functions which are not needed anymore because their purpose already got removed.

V RF.01.41.02.Mod alpha (2018-03-10) 
This is the "intelligent filament load update"
- new M3913 P[digits] which mounts/extrudes filament until Pxxxx digits are reached then stops. 
- new M3914 P[digits] which unmounts the extruder by slowly heating and checking force. It is/was quite hard to test out good settings for unmount. This might be updated in future, but I like it.
- inserted M3913 and M3914 into MOUNT_FILAMENT_SCRIPT_... and UNMOUNT_FILAMENT_SCRIPT_... to vastly improve "Menu->Extruder->(Un)Load Filament"
- compressed functions for MOUNT_FILAMENT_SCRIPT_WITH_HEATING and MOUNT_FILAMENT_SCRIPT_WITHOUT_HEATING functions to one, because they where quite identical.

V RF.01.41.01.Mod alpha (2018-03-10) 
- output object speeds are now limited to normal homing speeds. OctaStepping made that too fast. Thx@ AtlonXP
- MOUNT and UNMOUNT Scripts got an extra G92 E0 to in some cases prevent undo afterwards. Thx@ easygo25
- sync of UNMOUNT_FILAMENT_SCRIPTs and MOUNT_FILAMENT_SCRIPTs for both devices (RF2000/RF1000)

V RF.01.41.00.Mod alpha (2018-03-09) 